--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- 头部 -->
         <header>
             <div class="logo">
-                <img src="https://github.com/ZZJ-LBT/zzj-lbt.github.io/blob/main/title.png?raw=true" alt="星屿服务器">
+                <img src="/title.png" alt="星屿服务器">
             </div>
             <p>欢迎来到星屿服务器 - 一个小游戏Minecraft服务器！</p>
         </header>
