--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                 </div>
                 <div class="info-item">
                     <strong>服务器地址</strong>
-                    <p>暂未开放</p>
+                    <p>mc.ns-zzj.cn</p>
                 </div>
                 <div class="info-item">
                     <strong>端口</strong>
-                    <p>暂未开放</p>
+                    <p>38999</p>
                 </div>
             </div>
         </section>
