--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <p>ns-ZZJ</p>
                 </div>
                 <div class="info-item">
-                    <strong>服务器制作者</strong>
+                    <strong>地图制作者</strong>
                     <p>ns-ZZJ & LuckMin</p>
                 </div>
                 <div class="info-item">
