--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星屿服务器 - Minecraft服务器官网</title>
+    <link rel="icon" href="icon.png" type="image/png">
     <style>
         * {
             margin: 0;
@@ -183,7 +184,7 @@
         <!-- 头部 -->
         <header>
             <div class="logo">
-                <img src="/title.png" alt="星屿服务器">
+                <img src="title.png" alt="星屿服务器">
             </div>
             <p>欢迎来到星屿服务器 - 一个小游戏Minecraft服务器！</p>
         </header>
@@ -237,6 +238,13 @@
                 <div class="announcement-content">
                     星屿服务器正在紧张筹备中，预计将在近期正式开放。服务器采用最新的Minecraft版本，为玩家提供稳定、公平的游戏环境。
                 </div>
+            </div>
+            
+            <!-- 查看全部公告按钮 -->
+            <div style="text-align: center; margin-top: 20px;">
+                <a href="web_notice.html" style="display: inline-block; background: #4CAF50; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; transition: background 0.3s ease;">
+                    查看全部公告
+                </a>
             </div>
         </section>
         
