Fix HTML encoding issues in web_notice.html

--- a/web_notice.html
+++ b/web_notice.html
@@ -204,7 +204,7 @@
         
         <!-- 返回按钮 -->
         <div class="back-button">
-            <a href="mc_server_web.html">返回首页</a>
+            <a href="index.html">返回首页</a>
         </div>
         
         <!-- 底部 -->
@@ -214,4 +214,5 @@
         </footer>
     </div>
 </body>
+
 </html>
