--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星屿服务器 - Minecraft服务器官网</title>
-    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="icon" href="/icon.png" type="image/png">
     <style>
         * {
             margin: 0;
