--- a/web_notice.html
+++ b/web_notice.html
@@ -289,6 +289,14 @@
         <!-- 公告区域 -->
         <section class="announcements">
             <h2>全部公告</h2>
+
+            <div class="announcement-item">
+                <div class="announcement-date">2026-01-23</div>
+                <div class="announcement-title">🔧 密室杀手已经完工！</div>
+                <div class="announcement-content">
+                    密室杀手已经完工，玩家可以在游戏中遇到并解决这个神秘的问题。除了密室杀手，还有很多正在建设的小游戏！尽情期待！
+                </div>
+            </div>
             
             <div class="announcement-item">
                 <div class="announcement-date">2026-01-23</div>
