--- a/index.html
+++ b/index.html
@@ -626,10 +626,10 @@
             <h2 class="announcements-title">服务器公告</h2>
             
             <div class="announcement-item">
-                <div class="announcement-date">2026-01-23</div>
+                <div class="announcement-date">2026-01-29</div>
                 <div class="announcement-title">🔧 密室杀手已经完工！</div>
                 <div class="announcement-content">
-                    密室杀手已经完工，玩家可以在游戏中遇到并解决这个神秘的问题。除了密室杀手，还有很多正在建设的小游戏！尽情期待！
+                    密室杀手已经完工，玩家可以尽情玩游戏了！除了密室杀手，还有很多正在建设的小游戏。尽情期待！
                 </div>
             </div>
             
@@ -1094,3 +1094,4 @@
     </div>
 </body>
 </html>
+
