--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>星屿服务器 - Minecraft服务器官网</title>
+    <title>星屿服务器 - Minecraft服务器</title>
     <link rel="icon" href="icon.png" type="image/png">
     <style>
         * {
@@ -1094,4 +1094,5 @@
     </div>
 </body>
 </html>
+
 
