--- a/web_notice.html
+++ b/web_notice.html
@@ -31,6 +31,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            padding-top: 150px;
         }
         
         /* 头部导航栏 */
@@ -39,6 +40,10 @@
             margin-bottom: 30px;
             box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
             width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
         }
         
         .nav-content {
