Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -607,10 +607,10 @@
             
             <!-- 置顶信息 -->
             <div style="background: rgba(240, 21, 247, 0.1); border: 1px solid #F015F7; border-radius: 10px; padding: 10px; margin-bottom: 30px;">
-                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 1.4rem;">服务器提供者&服主:<br>ns-ZZJ</p>
-                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 1.4rem;">地图制作者:<br>ns-ZZJ&LuckMin</p>
-                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 2rem;"><strong>地址:<br>mc.ns-zzj.cn</strong></p>
-                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 2rem;"><strong>端口:<br>39999</strong></p>
+                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 1.4rem;">服务器提供者&服主<br>ns-ZZJ</p>
+                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 1.4rem;">地图制作者<br>ns-ZZJ&LuckMin</p>
+                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 2rem;"><strong>地址<br>mc.ns-zzj.cn</strong></p>
+                <p style="margin-bottom: 10px; line-height: 1.2; font-size: 2rem;"><strong>端口<br>39999</strong></p>
             </div>
             
             <p style="margin-bottom: 20px; line-height: 1.6;">欢迎来到星屿服务器！这是一个小游戏Minecraft服务器，我们致力于为玩家提供稳定、公平、有趣的游戏环境。</p>
@@ -777,7 +777,7 @@
                 // 当从第三页返回第二页时，滚动到第二页底部
                 if (currentPage === 3 && pageNumber === 2) {
                     // 计算第二页底部位置
-                    scrollPosition = page.offsetTop + page.offsetHeight - window.innerHeight;
+                    scrollPosition = page.offsetTop + page.offsetHeight - window.innerHeight * 1.2;
                     // 确保位置不小于页面顶部
                     scrollPosition = Math.max(scrollPosition, page.offsetTop);
                 } else {
