--- a/web_notice.html
+++ b/web_notice.html
@@ -44,6 +44,7 @@
             top: 0;
             left: 0;
             z-index: 1000;
+            backdrop-filter: blur(10px);
         }
         
         .nav-content {
