--- a/files_download.html
+++ b/files_download.html
@@ -44,6 +44,7 @@
             top: 0;
             left: 0;
             z-index: 1000;
+            backdrop-filter: blur(10px);
         }
         
         .nav-content {
